--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-openap-inventory-manager",
+  "name": "@viacomcbs/with-openap-inventory-manager",
   "description": "OpenAP Inventory Manager Next.js template",
   "version": "1.0.0",
   "author": "ViacomCBS",
@@ -25,13 +25,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
     "apollo-server-micro": "^2.23.0",
-    "broadcast-calendar": "git+ssh://git@stash.mtvi.com/vaa/broadcast-calendar.git",
+    "@viacomcbs/broadcast-calendar": "git+ssh://git@stash.mtvi.com/vaa/broadcast-calendar.git",
     "dotenv-flow": "3.2.0",
     "graphql": "^15.5.0",
     "luxon": "^1.26.0",
     "next": "^10.0.0",
-    "openap-inventory-manager-react": "file:../openap-inventory-manager/openap-inventory-manager-react/openap-inventory-manager-react-latest.tgz",
-    "openap-inventory-manager-server": "file:../openap-inventory-manager/openap-inventory-manager-server/openap-inventory-manager-server-latest.tgz",
+    "@viacomcbs/openap-inventory-manager-react": "file:../openap-inventory-manager/@viacomcbs/openap-inventory-manager-react/openap-inventory-manager-react-latest.tgz",
+    "@viacomcbs/openap-inventory-manager-server": "file:../openap-inventory-manager/@viacomcbs/openap-inventory-manager-server/openap-inventory-manager-server-latest.tgz",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.3",
