--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "dev:noauth": "NO_AUTH=true next dev -p 8080",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc",
-    "migrate:manager": "migrate-manager",
-    "migrate": "migrate -t migrations",
+    "lint": "next lint",
+    "migrate:manager": "openap-migrate-manager",
+    "migrate": "openap-migrate -t migrations",
     "compile": "tsc --project tsconfig.json --noEmit",
     "compile:watch": "npm run compile -- --watch",
     "license-check:prod": "license-checker --production",
@@ -24,28 +24,29 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
-    "apollo-server-micro": "^2.23.0",
-    "@viacomcbs/broadcast-calendar": "git+ssh://git@stash.mtvi.com/vaa/broadcast-calendar.git",
+    "@viacomcbs/broadcast-calendar": "^1.2.0",
+    "@viacomcbs/openap-inventory-manager-react": "0.13.0",
+    "@viacomcbs/openap-inventory-manager-server": "0.13.0",
+    "apollo-server-micro": "^3.1.2",
     "dotenv-flow": "3.2.0",
     "graphql": "^15.5.0",
-    "luxon": "^1.26.0",
-    "next": "^10.0.0",
-    "@viacomcbs/openap-inventory-manager-react": "file:../openap-inventory-manager/@viacomcbs/openap-inventory-manager-react/openap-inventory-manager-react-latest.tgz",
-    "@viacomcbs/openap-inventory-manager-server": "file:../openap-inventory-manager/@viacomcbs/openap-inventory-manager-server/openap-inventory-manager-server-latest.tgz",
+    "luxon": "^2.0.0",
+    "micro": "^9.3.4",
+    "next": "^11.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.3",
-    "slonik": "^23.6.4"
+    "slonik": "^24.0.0"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^10.0.9",
-    "@types/node": "^14.14.35",
+    "@types/luxon": "^2.0.0",
+    "@types/node": "^16.0.0",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/react-redux": "^7.1.16",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.0",
     "license-checker": "25.0.1",
-    "next-compose-plugins": "2.2.1",
-    "stats-webpack-plugin": "0.7.0",
     "typescript": "^4.0"
   }
 }
